syntax = "proto3";

option go_package = ".;ms_persistence";

// TODO https://developers.google.com/protocol-buffers/docs/reference/go-generated

import "validator.proto";
import "google/protobuf/timestamp.proto";

// MsPersistence is the service that generates the date
// by simulating multiple devices.
service MsPersistence {
    rpc SaveData (SaveDataRequest) returns (SaveDataResponse);
}

// SaveDataRequest is the request message for SaveData method.
message SaveDataRequest {
    // DeviceData is the data received from device.
    DeviceData deviceData = 1 [(validator.field) = {
        msg_exists: true
    }];
}

// SaveDataResponse is the response message for SaveData method.
message SaveDataResponse {}

//todo
// DeviceData is the data that the device sends.
message DeviceData {
    // DeviceId is the unique identifier of specific device.
    DeviceId device_id = 1 [(validator.field) = {
        msg_exists: true
    }];
    // Data is the data generated by the device.
    double data = 2;
    // Timestamp is time of generating data.
    google.protobuf.Timestamp timestamp = 3 [(validator.field) = {
        msg_exists: true
    }];
}

// DeviceId is the message that store the unique identifier of specific device.
message DeviceId {
    // Name is the unique title of specific device.
    string name = 1 [(validator.field) = {
        string_not_empty: true
    }];
}
